test_suite/tests/ui/fail/duplicated_attribute_arg/duplicated_option_arg.rs
use clapi::macros::*;

#[command]
#[option(enable)]
#[arg(enable)]
fn echo(enable: bool){}

fn main(){}