test_suite/tests/ui/fail/duplicated_attribute_arg/duplicated_option_arg.stderr
error: custom attribute panicked
 --> $DIR/duplicated_option_arg.rs:3:1
  |
3 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: function argument `enable` is already used in `#[option(enable)]`
